--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,13 +10,14 @@ body {
 body::before {
   content: "";
   position: fixed;
-  background: #040404 url("../img/cover.jpg") top right no-repeat;
   background-size: cover;
   left: 0;
   right: 0;
   top: 0;
   height: 100vh;
   z-index: -1;
+  background: #040404 url("../img/cover.jpg") center 25% no-repeat;
+  transform: scaleX(-1);
 }
 
 @media (min-width: 1024px) {
